# python-opendota

./: .gitignore  .ignore-template-files  README.md  config.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-post.yml  (+2 more)
.openapi-generator/: FILES  spec.json
custom-template/: README.md  README.mustache  gitignore.hbs  gitignore.mustache  openapi-generator_APP_VERSION.mustache  pyproject.hbs  pyproject.mustache
docs/: BenchmarksApi.md  BenchmarksResponse.md  BenchmarksResponseResult.md  BenchmarksResponseResultGoldPerMin.md  BenchmarksResponseResultGoldPerMinInner.md  ConstantsApi.md  DistributionsApi.md  DistributionsResponse.md  DistributionsResponseCountryMmr.md  DistributionsResponseCountryMmrFields.md  DistributionsResponseCountryMmrFieldsInner.md  DistributionsResponseCountryMmrRows.md  DistributionsResponseCountryMmrRowsInner.md  DistributionsResponseMmr.md  DistributionsResponseRanks.md  DistributionsResponseRanksFields.md  DistributionsResponseRanksFieldsInner.md  DistributionsResponseRanksRows.md  DistributionsResponseRanksRowsInner.md  DistributionsResponseRanksSum.md  ExplorerApi.md  FindMatchesApi.md  HealthApi.md  HeroDurationsResponse.md  HeroItemPopularityResponse.md  HeroItemPopularityResponseEarlyGameItems.md  HeroItemPopularityResponseLateGameItems.md  HeroItemPopularityResponseMidGameItems.md  HeroItemPopularityResponseStartGameItems.md  HeroMatchupsResponse.md  HeroObjectResponse.md  HeroStatsApi.md  HeroStatsResponse.md  HeroesApi.md  LeagueObjectResponse.md  LeaguesApi.md  LiveApi.md  MatchObjectResponse.md  MatchResponse.md  MatchResponseBuybackLog.md  (+65 more)
python_opendota/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py  schemas.py
utils/: clear.sh  diff-spec.sh  generate.sh  requirements.txt  update_package_version.py
(+399 files in other folders)
