[tool.poetry]
name = "python-opendota"
version = "1.0.0"
description = "OpenDota API"
authors = ["OpenAPI Generator community <team@openapitools.org>"]
maintainers = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]
keywords = ["OpenAPI", "OpenAPI-Generator", "OpenDota API"]
readme = "README.md"
homepage = "https://docs.opendota.com/"
repository = "https://github.com/swimmwatch/python-opendota"
documentation = "https://github.com/swimmwatch/python-opendota#documentation-for-api-endpoints"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6"
python_dateutil = "^2.5.3"
urllib3 = "^1.25.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
