[tool.poetry]
name = "python-opendota"
version = "1.0.3"
description = "Generated Python SDK for working with OpenDota API"
authors = ["OpenAPI Generator community <team@openapitools.org>"]
maintainers = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]
keywords = ["OpenAPI", "OpenAPI-Generator", "OpenDota API"]
readme = "README.md"
homepage = "https://docs.opendota.com/"
repository = "https://github.com/swimmwatch/python-opendota"
documentation = "https://github.com/swimmwatch/python-opendota#documentation-for-api-endpoints"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.6,<4"
urllib3 = "^1.26.9"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
